ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/EPC_domestic_data__c.object-meta.xml
<CustomObject>
    <label>EPC-domestic data</label>
    <nameField>
        <label>address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EPC-domestic data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>