ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/address1__c.field-meta.xml
<CustomField>
    <fullName>address1__c</fullName>
    <label>address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>