ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/address2__c.field-meta.xml
<CustomField>
    <fullName>address2__c</fullName>
    <label>address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>