ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/address3__c.field-meta.xml
<CustomField>
    <fullName>address3__c</fullName>
    <label>address3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>