ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/building_reference_number__c.field-meta.xml
<CustomField>
    <fullName>building_reference_number__c</fullName>
    <label>building_reference_number</label>
    <length>99</length>
    <type>Text</type>
</CustomField>