ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/built_form__c.field-meta.xml
<CustomField>
    <fullName>built_form__c</fullName>
    <label>built_form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>