ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/co2_emiss_curr_per_floor_area__c.field-meta.xml
<CustomField>
    <fullName>co2_emiss_curr_per_floor_area__c</fullName>
    <label>co2_emiss_curr_per_floor_area</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>