ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/co2_emissions_current__c.field-meta.xml
<CustomField>
    <fullName>co2_emissions_current__c</fullName>
    <label>co2_emissions_current</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>