ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/constituency__c.field-meta.xml
<CustomField>
    <fullName>constituency__c</fullName>
    <label>constituency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>