ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/constituency_label__c.field-meta.xml
<CustomField>
    <fullName>constituency_label__c</fullName>
    <label>constituency_label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>