ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/construction_age_band__c.field-meta.xml
<CustomField>
    <fullName>construction_age_band__c</fullName>
    <label>construction_age_band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>