ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/current_energy_efficiency__c.field-meta.xml
<CustomField>
    <fullName>current_energy_efficiency__c</fullName>
    <label>current_energy_efficiency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>