ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/current_energy_rating__c.field-meta.xml
<CustomField>
    <fullName>current_energy_rating__c</fullName>
    <label>current_energy_rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>