ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/energy_consumption_current__c.field-meta.xml
<CustomField>
    <fullName>energy_consumption_current__c</fullName>
    <label>energy_consumption_current</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>