ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/energy_tariff__c.field-meta.xml
<CustomField>
    <fullName>energy_tariff__c</fullName>
    <label>energy_tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>