ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/environment_impact_potential__c.field-meta.xml
<CustomField>
    <fullName>environment_impact_potential__c</fullName>
    <label>environment_impact_potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>