ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/extension_count__c.field-meta.xml
<CustomField>
    <fullName>extension_count__c</fullName>
    <label>extension_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>