ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/fixed_lighting_outlets_count__c.field-meta.xml
<CustomField>
    <fullName>fixed_lighting_outlets_count__c</fullName>
    <label>fixed_lighting_outlets_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>