ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/flat_storey_count__c.field-meta.xml
<CustomField>
    <fullName>flat_storey_count__c</fullName>
    <label>flat_storey_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>