ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/flat_top_storey__c.field-meta.xml
<CustomField>
    <fullName>flat_top_storey__c</fullName>
    <label>flat_top_storey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>