ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/floor_height__c.field-meta.xml
<CustomField>
    <fullName>floor_height__c</fullName>
    <label>floor_height</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>