ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/floor_level__c.field-meta.xml
<CustomField>
    <fullName>floor_level__c</fullName>
    <label>floor_level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>