ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/glazed_type__c.field-meta.xml
<CustomField>
    <fullName>glazed_type__c</fullName>
    <label>glazed_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>