ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/heat_loss_corridoor__c.field-meta.xml
<CustomField>
    <fullName>heat_loss_corridoor__c</fullName>
    <label>heat_loss_corridoor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>