ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/hot_water_cost_potential__c.field-meta.xml
<CustomField>
    <fullName>hot_water_cost_potential__c</fullName>
    <label>hot_water_cost_potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>