ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/inspection_date__c.field-meta.xml
<CustomField>
    <fullName>inspection_date__c</fullName>
    <label>inspection_date</label>
    <type>Date</type>
</CustomField>