ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/lmk_key__c.field-meta.xml
<CustomField>
    <fullName>lmk_key__c</fullName>
    <label>lmk_key</label>
    <length>99</length>
    <type>Text</type>
</CustomField>