ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/local_authority_label__c.field-meta.xml
<CustomField>
    <fullName>local_authority_label__c</fullName>
    <label>local_authority_label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>