ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/lodgement_date__c.field-meta.xml
<CustomField>
    <fullName>lodgement_date__c</fullName>
    <label>lodgement_date</label>
    <type>Date</type>
</CustomField>