ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/lodgement_datetime__c.field-meta.xml
<CustomField>
    <fullName>lodgement_datetime__c</fullName>
    <label>lodgement_datetime</label>
    <type>DateTime</type>
</CustomField>