ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/low_energy_fixed_light_count__c.field-meta.xml
<CustomField>
    <fullName>low_energy_fixed_light_count__c</fullName>
    <label>low_energy_fixed_light_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>