ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/main_fuel__c.field-meta.xml
<CustomField>
    <fullName>main_fuel__c</fullName>
    <label>main_fuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>