ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/main_heating_controls__c.field-meta.xml
<CustomField>
    <fullName>main_heating_controls__c</fullName>
    <label>main_heating_controls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>