ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/mains_gas_flag__c.field-meta.xml
<CustomField>
    <fullName>mains_gas_flag__c</fullName>
    <label>mains_gas_flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>