ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/mechanical_ventilation__c.field-meta.xml
<CustomField>
    <fullName>mechanical_ventilation__c</fullName>
    <label>mechanical_ventilation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>