ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/multi_glaze_proportion__c.field-meta.xml
<CustomField>
    <fullName>multi_glaze_proportion__c</fullName>
    <label>multi_glaze_proportion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>