ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/number_habitable_rooms__c.field-meta.xml
<CustomField>
    <fullName>number_habitable_rooms__c</fullName>
    <label>number_habitable_rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>