ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/number_open_fireplaces__c.field-meta.xml
<CustomField>
    <fullName>number_open_fireplaces__c</fullName>
    <label>number_open_fireplaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>