ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/photo_supply__c.field-meta.xml
<CustomField>
    <fullName>photo_supply__c</fullName>
    <label>photo_supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>