ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>EPC domestic</relationshipLabel>
    <relationshipName>EPC_domestic</relationshipName>
    <type>Lookup</type>
</CustomField>