ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/posttown__c.field-meta.xml
<CustomField>
    <fullName>posttown__c</fullName>
    <label>posttown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>