ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/potential_energy_efficiency__c.field-meta.xml
<CustomField>
    <fullName>potential_energy_efficiency__c</fullName>
    <label>potential_energy_efficiency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>