ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/potential_energy_rating__c.field-meta.xml
<CustomField>
    <fullName>potential_energy_rating__c</fullName>
    <label>potential_energy_rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>