ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/property_type__c.field-meta.xml
<CustomField>
    <fullName>property_type__c</fullName>
    <label>property_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>