ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/roof_description__c.field-meta.xml
<CustomField>
    <fullName>roof_description__c</fullName>
    <label>roof_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>