ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/secondheat_description__c.field-meta.xml
<CustomField>
    <fullName>secondheat_description__c</fullName>
    <label>secondheat_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>