ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/solar_water_heating_flag__c.field-meta.xml
<CustomField>
    <fullName>solar_water_heating_flag__c</fullName>
    <label>solar_water_heating_flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>