ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/tenure__c.field-meta.xml
<CustomField>
    <fullName>tenure__c</fullName>
    <label>tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>