ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/total_floor_area__c.field-meta.xml
<CustomField>
    <fullName>total_floor_area__c</fullName>
    <label>total_floor_area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>