ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/unheated_corridor_length__c.field-meta.xml
<CustomField>
    <fullName>unheated_corridor_length__c</fullName>
    <label>unheated_corridor_length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>