ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/fields/walls_energy_eff__c.field-meta.xml
<CustomField>
    <fullName>walls_energy_eff__c</fullName>
    <label>walls_energy_eff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>