ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>building_reference_number__c</columns>
    <columns>NAME</columns>
    <columns>built_form__c</columns>
    <columns>current_energy_rating__c</columns>
    <columns>lodgement_date__c</columns>
    <columns>property_type__c</columns>
    <columns>total_floor_area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>