ezyplot-x1/force-app/main/default/objects/EPC_domestic_data__c/listViews/Floor_sizes_per_type.listView-meta.xml
<ListView>
    <fullName>Floor_sizes_per_type</fullName>
    <columns>NAME</columns>
    <columns>built_form__c</columns>
    <columns>total_floor_area__c</columns>
    <columns>tenure__c</columns>
    <columns>floor_level__c</columns>
    <columns>lodgement_date__c</columns>
    <columns>number_habitable_rooms__c</columns>
    <columns>construction_age_band__c</columns>
    <filterScope>Mine</filterScope>
    <label>Floor sizes per type</label>
</ListView>